# real_time_customer_behavior_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data_ingestion/: producer.py
data_processing/: consumer.py  setup_db.py
docker/: docker-compose.yml
